kubernetes/base/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app.kubernetes.io/name: ui
        # app.kubernetes.io/instance:
        app.kubernetes.io/part-of: unified-graphics
        app.kubernetes.io/component: frontend
        app: unified-graphics-ui
        tier: frontend
    name: unified-graphics-ui
spec:
    replicas: 1
    selector:
        matchLabels:
            app: unified-graphics-ui
    template:
        metadata:
            labels:
                app: unified-graphics-ui
        spec:
            containers:
                - image: unified-graphics/ui
                  imagePullPolicy: Always # Since we're tracking a long-lived tag, we'll want to always check for updated images
                  name: unified-graphics-ui
                  resources:
                      requests:
                          memory: "1Gi"
                          cpu: "0.5"
                      limits:
                          memory: "2Gi"
                          cpu: "1"
                  ports:
                      - containerPort: 80
                        protocol: TCP
                  # FIXME - we should explore dissallowing privilege escalation
                  securityContext:
                      allowPrivilegeEscalation: true # Default behavior
