kubernetes/base/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphics-ui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graphics-ui
                port:
                  number: 80
          # - path: /diag # TODO - this should be redirecting to the app root
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: dev-graphics-api # TODO - kustomize isn't updating this automatically
          #       port:
          #         number: 80
